# xplore-reimagined

./: README.md
back-end/: .gitignore  README.md  main.py  requirements.txt  vercel.json
back-end/app/: README.md  TEST_DATA.md  exceptions.py  logging.py  main.py  pyproject.toml  xplore.db
back-end/app/ai_questionnaire/: controller.py  output_parser_models.py  services.py
back-end/app/auth/student/: controller.py  models.py  services.py
back-end/app/database/: cloudinary_config.py  core.py  redis_config.py
back-end/app/entities/: entities.py  students.py
back-end/app/features/ai_questionnaire/: controller.py  models.py  output_parser_models.py  prompts.py  services.py
back-end/app/features/auth/student/: controller.py  models.py  services.py
back-end/app/features/profile/: controller.py  models.py  services.py
back-end/app/tests/ai_questionnaire/: ai_questionnaire_test.py
back-end/app/tests/student_auth/: student_auth_test.py
back-end/app/utils/: constants.py  env_secrets.py  helper.py  otp_templates.py  pdf_generation_manager.py  scheduled_jobs.py  send_email.py
back-end/test_features/: create_pdf_demo.py  create_pdf_mgr_demo.py
designs/: README.md
mobile-app/: README.md
mobile-app/ai_career_finder_app/: pubspec.yaml
mobile-app/ai_career_finder_app/lib/: main.dart
mobile-app/ai_career_finder_app/test/: widget_test.dart
web/: README.md
xplore-react/: index.html  package-lock.json  package.json  vite.config.js
xplore-react/Backend/: .env  db.js  package-lock.json  package.json  server.js
xplore-react/Backend/routes/: auth.js
xplore-react/src/: App.jsx  index.css  main.jsx
xplore-react/src/assets/: login.js  question.js  signup.js
xplore-react/src/components/: Button.jsx  Hero.jsx  Input.jsx  Login.jsx  SignUp.jsx  StartBtn.jsx  Test.jsx
(+9 files in other folders)
