[project]
name = "Xplore-Backend"
version = "0.1.0"
description = "Backend API for Xplore."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pip-tools>=7.4.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=6.2.0",
    "reportlab>=4.4.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
